# nyu-processor-labs

./: .gitignore  README.md
labs/lab-1/cmake-test/: CMakeLists.txt  ReadMe.md
labs/lab-2/: CMakeLists.txt  ReadMe.md
labs/lab-2/dv/: CMakeLists.txt  exercise3.cpp
labs/lab-2/rtl/: Exercise1.sv  Exercise2.sv  Exercise3.sv  Exercise4.sv
labs/lab-3/: ReadMe.md
labs/lab-3/dv/: exercise1.cpp  exercise2.cpp  exercise3.cpp  exercise4.cpp
labs/lab-3/rtl/: Exercise3.sv
labs/lab-3/rtl/Mysteries/: Mystery2.sv
labs/lab-4/: CMakeLists.txt  ReadMe.md  vcpkg.json
labs/lab-4/cmake/: BootstrapVcpkg.cmake
labs/lab-4/dv/: CMakeLists.txt
labs/lab-4/rtl/: CMakeLists.txt
labs/lab-6/: README.md
labs/lab-7/: README.md
labs/lab-8/: README.md
